--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aura - Debate Assistant Chatbot</title>
     <!-- Link to Google Fonts for Dancing Script and Times New Roman -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Times+New+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            <h1>Aura Debate Assistant</h1>
+            <h1 class="aura-title">Aura</h1>
+            <h2 class="debate-assistant-title">Debate Assistant</h2>
             <p>Your personal guide for debates and arguments</p>
         </div>
         <div class="chat-body">
